# plugin-freedom-system

./: .continue-here.md  CMakeLists.txt  PLUGINS.md  README.md  batch-build-install.sh  install-all-working.sh
.claude/: preferences-README.md  settings.local.json
.claude/commands/: destroy.md  package.md
.claude/skills/build-automation/: SKILL.md
.claude/skills/plugin-lifecycle/: SKILL.md
.claude/skills/plugin-lifecycle/references/: error-handling.md  installation-process.md  mode-3-reset.md  mode-4-destroy.md  uninstallation-process.md
.claude/skills/plugin-packaging/: SKILL.md
.claude/skills/plugin-packaging/references/: pkg-creation.md
.claude/skills/system-setup/references/: juce-setup-guide.md
.claude/skills/ui-mockup/assets/: integration-checklist-template.md
plugins/AngelGrain/: NOTES.md
plugins/AutoClip/: NOTES.md
plugins/DriveVerb/: CHANGELOG.md  NOTES.md
plugins/Drum808/: NOTES.md
plugins/Drum808/.ideas/mockups/: v3-integration-checklist.md
plugins/DrumRoulette/: NOTES.md
plugins/FlutterVerb/: NOTES.md
plugins/GainKnob/: NOTES.md
plugins/LushPad/: NOTES.md
plugins/LushPad/.ideas/mockups/: v2-integration-checklist.md
plugins/OrganicHats/: NOTES.md
plugins/Scatter/: NOTES.md
plugins/SimpleSampler/: .continue-here.md  CMakeLists.txt
plugins/SimpleSampler/.ideas/: architecture.md  creative-brief.md  parameter-spec-draft.md  parameter-spec.md  plan.md
plugins/SimpleSampler/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v2-CMakeLists-SNIPPET.txt  v2-PluginEditor-TEMPLATE.cpp  v2-PluginEditor-TEMPLATE.h  v2-integration-checklist.md  v2-ui-test.html  v2-ui.html  v2-ui.yaml
plugins/SimpleSampler/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SimpleSamplerSound.cpp  SimpleSamplerSound.h  SimpleSamplerVoice.cpp  SimpleSamplerVoice.h
plugins/TapeAge/: NOTES.md
scripts/: build-and-install.sh
troubleshooting/build-failures/: stale-build-after-stage-5-gui-changes-OrganicHats-20251112.md
troubleshooting/gui-issues/: webview-knobs-frozen-multiple-causes-TapeAge-20251111.md
troubleshooting/patterns/: juce8-critical-patterns.md
troubleshooting/validation-problems/: vst3-invalid-signature-plugin-cache-FlutterVerb-20251111.md
